--- a/motorsports.html
+++ b/motorsports.html
@@ -96,22 +96,42 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/supercross">FIM Supercross - Australian GP</a></td>
-<td>November 29, 2025 01:30 AM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 13:30:00" data-start="November 29, 2025 01:30:00"></span>
-</td></tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice</a></td>
+<td>December 05, 2025 01:30 AM</td>
+<td><span class="countdown-timer" data-end="December 05, 2025 13:30:00" data-start="December 05, 2025 01:30:00"></span>
+</td>
 <tr>
-<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Sprint</a></td>
-<td>November 29, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 18:00:00" data-start="November 29, 2025 06:00:00"></span>
-</td></tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice 2</a></td>
+<td>December 05, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="December 05, 2025 17:00:00" data-start="December 05, 2025 05:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Free Practice 3</a></td>
+<td>December 06, 2025 02:30 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 14:30:00" data-start="December 06, 2025 02:30:00"></span>
+</td>
 <tr>
 <td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Qualifying</a></td>
-<td>November 29, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="November 29, 2025 22:00:00" data-start="November 29, 2025 10:00:00"></span>
-</td></tr>
+<td>December 06, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 18:00:00" data-start="December 06, 2025 06:00:00"></span>
+</td>
 <tr>
-</tr></tbody>
+<td><a href="https://roxiestreams.live/wec">Formula E - Sao Paulo Race</a></td>
+<td>December 06, 2025 09:05 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 21:05:00" data-start="December 06, 2025 09:05:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.live/supercross">FIM Supercross Championship</a></td>
+<td>December 06, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 21:30:00" data-start="December 06, 2025 09:30:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.live/f1-streams">Formula 1 - Abu Dhabi Grand Prix</a></td>
+<td>December 07, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 17:00:00" data-start="December 07, 2025 05:00:00"></span>
+</td>
+<tr>
+</tr></tr></tr></tr></tr></tr></tr></tr></tbody>
 </table>
 </div>
 </div>
