--- a/soccer.html
+++ b/soccer.html
@@ -95,22 +95,38 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Bologna vs Parma</a>
-<td>December 04, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 05, 2025 08:00:00" data-start="December 04, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">FIFA World Cup 2026: Draw</a>
+<td>December 05, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 08:00:00" data-start="December 05, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Lazio vs Milan</a>
-<td>December 04, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 05, 2025 11:00:00" data-start="December 04, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Galatasaray vs Samsunspor</a>
+<td>December 05, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 08:00:00" data-start="December 05, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Manchester United vs West Ham</a>
-<td>December 04, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 05, 2025 11:00:00" data-start="December 04, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Brest vs Monaco</a>
+<td>December 05, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 09:00:00" data-start="December 05, 2025 10:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Cruzeiro vs Botafogo</a>
-<td>December 04, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="December 05, 2025 13:30:00" data-start="December 04, 2025 14:30:00"></span></td>
-<tr></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Comoros vs Saudi Arabia</a>
+<td>December 05, 2025 10:30 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 09:30:00" data-start="December 05, 2025 10:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Mainz 05 vs Borussia M'gladbach</a>
+<td>December 05, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 10:30:00" data-start="December 05, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Lille vs Marseille</a>
+<td>December 05, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 11:00:00" data-start="December 05, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Real Oviedo vs Mallorca</a>
+<td>December 05, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 11:00:00" data-start="December 05, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Benfica vs Sporting CP</a>
+<td>December 05, 2025 12:15 PM</td>
+<td><span class="countdown-timer" data-end="December 06, 2025 11:15:00" data-start="December 05, 2025 12:15:00"></span></td>
+<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
