--- a/nba.html
+++ b/nba.html
@@ -207,6 +207,194 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 05, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Lakers vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:00 PM:00" data-start="December 05, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Miami Heat vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:00 PM:00" data-start="December 05, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Denver Nuggets vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:30 PM:00" data-start="December 05, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         San Antonio Spurs vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:30 PM:00" data-start="December 05, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Portland Trail Blazers vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:30 PM:00" data-start="December 05, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Utah Jazz vs New York Knicks
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:30 PM:00" data-start="December 05, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Charlotte Hornets vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        December 05, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 4:30 PM:00" data-start="December 05, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Indiana Pacers vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        December 05, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 5:00 PM:00" data-start="December 05, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Phoenix Suns vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        December 05, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 5:00 PM:00" data-start="December 05, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Los Angeles Clippers vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        December 05, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 5:00 PM:00" data-start="December 05, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-11">
+         Philadelphia 76ers vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        December 05, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 5:00 PM:00" data-start="December 05, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-12">
+         Dallas Mavericks vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        December 05, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 06, 2025 6:30 PM:00" data-start="December 05, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
