--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <td><span class="countdown-timer" data-start="December 04, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl-streams-">NFL (TNF)</td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (TNF)</td>
                     <td>December 04, 2025 17:15 PM</td>
                     <td><span class="countdown-timer" data-start="December 04, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
