--- a/index.html
+++ b/index.html
@@ -118,19 +118,29 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-3">Premier League</td>
-                    <td>December 04, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 04, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">FIFA World Cup Draw</td>
+                    <td>December 05, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 05, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer-streams-6">Laliga</td>
+                    <td>December 05, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 05, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</td>
-                    <td>December 04, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 04, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 05, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 05, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (TNF)</td>
-                    <td>December 04, 2025 17:15 PM</td>
-                    <td><span class="countdown-timer" data-start="December 04, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</td>
+                    <td>December 05, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 05, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1</td>
+                    <td>December 06, 2025 02:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 06, 2025 02:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
