--- a/nfl-streams-13.html
+++ b/nfl-streams-13.html
@@ -99,7 +99,7 @@
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.qiyarmedia.com/nfl13.m3u8')">Stream 1</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.qiyarmedia.com/nflalt.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://thedaffodill.wnion.co.in/nflalty.m3u8')">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil07.wnion.co.in/nflalty.m3u8')">Stream 3</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
