--- a/nfl.html
+++ b/nfl.html
@@ -97,21 +97,21 @@
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Kennesaw State vs Jacksonville State</a>
 <td>December 05, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 08:00:00" data-start="December 05, 2025 09:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 06, 2025 15:00:00" data-start="December 05, 2025 16:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Troy vs James Madison</a>
 <td>December 05, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 08:00:00" data-start="December 05, 2025 09:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 06, 2025 15:00:00" data-start="December 05, 2025 16:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-3">North Texas vs Tulane</a>
 <td>December 05, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 09:00:00" data-start="December 05, 2025 10:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 06, 2025 16:00:00" data-start="December 05, 2025 17:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-4">UNLV vs Boise State</a>
 <td>December 05, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 10:30:00" data-start="December 05, 2025 11:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 06, 2025 16:00:00" data-start="December 05, 2025 17:00:00"></span></td>
 <tr>
-</tbody></table>
+</tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
