--- a/nfl.html
+++ b/nfl.html
@@ -111,7 +111,31 @@
 <td>December 05, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="December 06, 2025 16:00:00" data-start="December 05, 2025 17:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">BYU vs Texas Tech</a>
+<td>December 06, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Miami (Ohio) vs Western Michigan</a>
+<td>December 06, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-3">Prairie View A&amp;M vs Jackson State</a>
+<td>December 06, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 10:00:00" data-start="December 06, 2025 11:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Georgia vs Alabama</a>
+<td>December 06, 2025 13:00 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 12:00:00" data-start="December 06, 2025 13:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-5">Indiana vs Ohio State</a>
+<td>December 06, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 16:00:00" data-start="December 06, 2025 17:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Duke vs Virginia</a>
+<td>December 06, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 16:00:00" data-start="December 06, 2025 17:00:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
