--- a/wwe-streams.html
+++ b/wwe-streams.html
@@ -98,6 +98,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://loveliness.wnion.co.in/wwe.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil07.wnion.co.in/roxiewwe.m3u8')">Stream 2</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
