--- a/nba.html
+++ b/nba.html
@@ -305,6 +305,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 06, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         New Orleans Pelicans vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        December 06, 2025 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 2:00 PM:00" data-start="December 06, 2025 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Atlanta Hawks vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        December 06, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 4:00 PM:00" data-start="December 06, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Golden State Warriors vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 06, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 4:30 PM:00" data-start="December 06, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Milwaukee Bucks vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        December 06, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 4:30 PM:00" data-start="December 06, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Sacramento Kings vs Miami Heat
+        </a>
+       </td>
+       <td>
+        December 06, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 5:00 PM:00" data-start="December 06, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Los Angeles Clippers vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        December 06, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 5:00 PM:00" data-start="December 06, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Houston Rockets vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        December 06, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 07, 2025 5:30 PM:00" data-start="December 06, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
