--- a/soccer.html
+++ b/soccer.html
@@ -95,34 +95,115 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">FIFA World Cup 2026: Draw</a>
-<td>December 05, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 08:00:00" data-start="December 05, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Aston Villa vs Arsenal</a>
+<td>December 06, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Galatasaray vs Samsunspor</a>
-<td>December 05, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 08:00:00" data-start="December 05, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Derby County vs Leicester City</a>
+<td>December 06, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Brest vs Monaco</a>
-<td>December 05, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 09:00:00" data-start="December 05, 2025 10:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Norwich City</a>
+<td>December 06, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Mainz 05 vs Borussia M'gladbach</a>
-<td>December 05, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 10:30:00" data-start="December 05, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Villarreal vs Getafe</a>
+<td>December 06, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 04:00:00" data-start="December 06, 2025 05:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Lille vs Marseille</a>
-<td>December 05, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 11:00:00" data-start="December 05, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Stuttgart vs Bayern München</a>
+<td>December 06, 2025 06:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 05:30:00" data-start="December 06, 2025 06:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Real Oviedo vs Mallorca</a>
-<td>December 05, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 11:00:00" data-start="December 05, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Bournemouth vs Chelsea</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Benfica vs Sporting CP</a>
-<td>December 05, 2025 12:15 PM</td>
-<td><span class="countdown-timer" data-end="December 06, 2025 11:15:00" data-start="December 05, 2025 12:15:00"></span></td>
-<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Everton vs Nottingham</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Manchester City vs Sunderland</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Newcastle United vs Burnley</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Tottenham vs Brentford</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Bristol City vs Millwall</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Ipswich Town vs Coventry City</a>
+<td>December 06, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Deportivo Alavés vs Real Sociedad</a>
+<td>December 06, 2025 07:15 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 06:15:00" data-start="December 06, 2025 07:15:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Nantes vs Lens</a>
+<td>December 06, 2025 08:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 07:00:00" data-start="December 06, 2025 08:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Inter Milan vs Como</a>
+<td>December 06, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Leeds vs Liverpool</a>
+<td>December 06, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs Real Betis</a>
+<td>December 06, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">RB Leipzig vs Eintracht Frankfurt</a>
+<td>December 06, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Toulouse vs Strasbourg</a>
+<td>December 06, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 09:00:00" data-start="December 06, 2025 10:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Inter Miami vs Vanocuver Whitecaps</a>
+<td>December 06, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 10:30:00" data-start="December 06, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Hellas Verona vs Atalanta</a>
+<td>December 06, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 10:45:00" data-start="December 06, 2025 11:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Athletic Club vs Atlético Madrid</a>
+<td>December 06, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 11:00:00" data-start="December 06, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Kilmarnock vs Rangers</a>
+<td>December 06, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 11:00:00" data-start="December 06, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">PSG vs Rennes</a>
+<td>December 06, 2025 12:05 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 11:05:00" data-start="December 06, 2025 12:05:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Mirassol vs Flamengo</a>
+<td>December 06, 2025 13:30 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 12:30:00" data-start="December 06, 2025 13:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Toluca vs Monterrey</a>
+<td>December 06, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 16:00:00" data-start="December 06, 2025 17:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Tigres UANL vs Cruz Azul</a>
+<td>December 06, 2025 19:10 PM</td>
+<td><span class="countdown-timer" data-end="December 07, 2025 18:10:00" data-start="December 06, 2025 19:10:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
