--- a/soccer-streams-1.html
+++ b/soccer-streams-1.html
@@ -97,7 +97,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://loveliness.wnion.co.in/fox.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil07.wnion.co.in/tnt.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://loveliness.wnion.co.in/usa.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -132,7 +133,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://loveliness.wnion.co.in/fox.m3u8');
+            showPlayer('clappr', 'https://daffodil07.wnion.co.in/tnt.m3u8');
         };
     </script>
     <script>
