--- a/nfl.html
+++ b/nfl.html
@@ -103,7 +103,7 @@
 <td>December 06, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-3">Prairie View A&amp;M vs Jackson State</a>
+<td><a href="https://roxiestreams.live/ncaa-streams-3">Prairie View A&M vs Jackson State</a>
 <td>December 06, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 10:00:00" data-start="December 06, 2025 11:00:00"></span></td>
 <tr>
