--- a/fighting.html
+++ b/fighting.html
@@ -100,7 +100,7 @@
 <td>December 06, 2025 14:30 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 06, 2025 14:30:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/ufc">WWE NXT Deadline</a></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT Deadline</a></td>
 <td>December 06, 2025 15:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 06, 2025 15:00:00"></span></td>
 </tr>
