--- a/soccer.html
+++ b/soccer.html
@@ -182,28 +182,7 @@
 <td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Racing Club</a>
 <td>December 07, 2025 14:00 PM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 11:00:00" data-start="December 06, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Kilmarnock vs Rangers</a>
-<td>December 06, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 11:00:00" data-start="December 06, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">PSG vs Rennes</a>
-<td>December 06, 2025 12:05 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 11:05:00" data-start="December 06, 2025 12:05:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Mirassol vs Flamengo</a>
-<td>December 06, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 12:30:00" data-start="December 06, 2025 13:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Toluca vs Monterrey</a>
-<td>December 06, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 16:00:00" data-start="December 06, 2025 17:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Tigres UANL vs Cruz Azul</a>
-<td>December 06, 2025 19:10 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 18:10:00" data-start="December 06, 2025 19:10:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
